# ENACdrives

./: .gitignore  .prettierignore  README.md  TODO  TODO.md  check_mount_filers_config.py  mount_filers  package-lock.json  pyproject.toml
Vagrant/: Vagrantfile  provision_script.sh
Vagrant/etc/: ntp.conf
VagrantTestVMs/Ubuntu18.04/: VagrantBootstrap.sh  Vagrantfile
VagrantTestVMs/Ubuntu20.04/: VagrantBootstrap.sh  Vagrantfile
VagrantTestVMs/Ubuntu22.04/: Vagrantfile
app/: mount_filers  mount_filers_rewrite
app/etc/: mount_filers.conf
client/: ENACdrives.py  LICENSE  MANIFEST.in  Pipfile  README.md  cifs_mount.py  cli.py  conf.py  enacdrives-1.2.0  enacdrives.icns  enacdrives.py  enacdrives.spec  enacit1logs.py  gui.py  lin_stack.py  mount_filers.conf  mount_filers.icns  mount_filers.py  osx_stack.py  qt_utility.py  setup.py  setup_mac.py  setup_osx.py  tell_version.py  test.conf  test_Qt.py  test_Qt_tetris.py  test_conf.py  test_qt.py  test_qt2.py  utility.py  win_stack.py
client/enacdrives/: cifs_mount.py  cli.py  conf.py  enacit1logs.py  gui.py  lin_stack.py  osx_stack.py  setup.py  setup_osx.py  utility.py  win_stack.py
client/etc/: enacdrives.conf
django/: settings.py  urls.py
django/directory/: urls.py  (+1 more)
docker/: Dockerfile
docs/: .htaccess  NEW_CLIENT_RELEASE.md  config_parameters.md  debian_tuto.md  fabfile.py  meeting.md  mount_filers.mm  server_ui.md  use_cases_workflows.md
server_side/: README
tools/: Pipfile  build_enacdrives_deb.sh  tell_version.py
v2011/: NOTES  mount_filers.mm
web_app/: .gitignore  deploy.README  fabfile.py
(+118 files in other folders)
