[tool.poetry]
name = "ENACdrives"
version = "1.2.6"
description = ""
authors = ["Samuel Bancal <Samuel.Bancal@epfl.ch>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
